--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,10 @@ repository = "https://github.com/MrPicklePinosaur/worldplace"
 
 [dependencies]
 ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }
+tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 serde_json = { version = "1.0" }
 
 anyhow = { version = "1" }
 env_logger = { version = "0.9" }
 log = { version = "0.4" }
-
-[build-dependencies]
-ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }
-serde_json = { version = "1.0" }
