--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ serde_json = { version = "1.0" }
 anyhow = { version = "1" }
 env_logger = { version = "0.9" }
 log = { version = "0.4" }
+
+[build-dependencies]
+ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }
+serde_json = { version = "1.0" }
