reverse engineer provider connection to metamask

--- a/crates/worldplace_app/Cargo.toml
+++ b/crates/worldplace_app/Cargo.toml
@@ -9,7 +9,9 @@ repository = "https://github.com/MrPicklePinosaur/worldplace"
 
 [dependencies]
 yew = { version = "0.20.0", features = ["csr"] }
+yew-ethereum-provider = { git = "https://github.com/monomadic/yew-ethereum-provider" }
 ethers = { version = "2.0.6", default-features = false, features = ["ethers-solc"] }
+web3 = { version = "0.19", default-features = false, features = ["wasm", "eip-1193", "http"] }
 
 serde_json = { version = "1.0" }
 
