--- a/crates/worldplace_contract/Cargo.toml
+++ b/crates/worldplace_contract/Cargo.toml
@@ -9,7 +9,8 @@ repository = "https://github.com/MrPicklePinosaur/worldplace"
 
 [dependencies]
 anyhow = "1.0.72"
-ethers = { version = "2.0.6", default-features = false, features = ["ethers-solc"] }
+dotenvy = "0.15.7"
+ethers = { version = "2.0.6", default-features = true, features = ["ethers-solc"] }
 k256 = "0.13.1"
 tokio = {version="1.31.0", features=["full"]}
 
