--- a/crates/worldplace_cli/Cargo.toml
+++ b/crates/worldplace_cli/Cargo.toml
@@ -11,3 +11,5 @@ repository = "https://github.com/MrPicklePinosaur/worldplace"
 web3 = { version = "0.19", default-features = false, features = ["wasm", "eip-1193", "http"] }
 clap = { version = "4.3", features = ["derive"] }
 tokio = {version="1.31.0", features=["full"]}
+
+worldplace_abi = { path = "../worldplace_abi" }
