--- a/crates/worldplace_abi/Cargo.toml
+++ b/crates/worldplace_abi/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT OR Apache-2.0"
 authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
 description = "r/place on the blockchain"
 repository = "https://github.com/MrPicklePinosaur/worldplace"
+build = "build.rs"
 
 [dependencies]
 # ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }
